namespace Entidad;

public class Cliente
{
    
}