namespace Entidad;

public class Clinica
{
    
}