namespace Entidad;

public class Consulta
{
    
}