namespace Entidad;

public class Gato
{
    
}