namespace Entidad;

public class LineaTratamiento
{
    
}