namespace Entidad;

public class Mascota
{
    
}