namespace Entidad;

public class Perro
{
    
}