namespace Entidad;

public class Veterinario
{
    
}