@startuml

class Clinica <<entity>>{
    
}

class Veterinario <<entity>>{
    + Id : int
    + Nombre : string
}

class Consulta <<entity>>{
    + Fecha : date
    + DiagnoticoFinal : string
}

class LineaTratamiento <<entity>>{
    + Concepto : string
    + Precio : decimal
}

class Cliente <<entity>>{
    + DNI : string
    + NombreCompleto : string
    + Telefono : string
}

class Mascota <<entity>>{
    + NumChip : string
    + Nombre : string
    + Especie : string
    + Peso : double
}

class Perro <<entity>>{
    + NivelAgrsividad : int
}

class Gato <<entity>>{
    + TestLeucemia : bool
}

class ControlRegistrarMascota <<control>>{
    + RegistrarMascota() : void
}

class ControlSolicitudConsulta <<control>>{
    + SolicitarConsulta() : void
}

class ControlPagoFactura <<control>>{
    + PagarFactura() : void
}


ControlRegistrarMascota ..> Cliente
ControlRegistrarMascota ..> Mascota

ControlSolicitudConsulta ..> Consulta
ControlSolicitudConsulta ..> Cliente

ControlPagoFactura ..> Cliente
ControlPagoFactura ..> Consulta

Clinica o-- Veterinario : cuenta con >
Clinica o-- Consulta : aloja >
Cliente o-- Mascota : es dueño de >
Consulta -- Mascota : atiende a >
Consulta -- Veterinario : realizada por >
Consulta *-- LineaTratamiento : contiene >
Mascota <|-- Perro : es un <
Mascota <|-- Gato : es un <

@enduml